--- a/contact.html
+++ b/contact.html
@@ -572,7 +572,7 @@
                                 <div class="col-md-12 ">
                                     <div class="text-left ">
                                         <button type="submit " id="submit " class="ttm-btn ttm-btn-size-md ttm-btn-bgcolor-skincolor " value=" ">
-                                                Submit Quote
+                                                Submit
                                             </button>
                                     </div>
                                 </div>
@@ -581,9 +581,6 @@
                     </div>
                 </div>
                 <!-- row end -->
-
-
-
             </section>
             <!-- services-slide-section end -->
 
@@ -677,24 +674,17 @@
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
                             <div class="widget flicker_widget clearfix ">
-                                <h3 class="widget-title ">News Letter</h3>
+
                                 <div class="textwidget widget-text ">
-                                    Sign up today for hints, tips and the latest product news
-                                    <form id="subscribe-form " class="newsletter-form " method="post " action="# " data-mailchimp="true ">
-                                        <div class="mailchimp-inputbox clearfix " id="subscribe-content ">
-                                            <i class="fa fa-envelope "></i>
-                                            <input type="email " name="email " placeholder="Email Address.. " required=" ">
-                                            <input type="submit " value=" ">
-                                        </div>
-                                        <div id="subscribe-msg "></div>
-                                    </form>
-                                    <h5 class="mb-20 ">Follow Us On</h5>
+
+
+                                    <h5 class="mb-20 text-center ">Follow Us On</h5>
                                     <div class="social-icons circle social-hover ">
-                                        <ul class="list-inline ">
-                                            <li class="social-facebook "><a class="tooltip-top " target="_blank " href="# " data-tooltip="Facebook "><i class="fa fa-facebook " aria-hidden="true "></i></a></li>
-                                            <li class="social-twitter "><a class="tooltip-top " target="_blank " href="# " data-tooltip="Twitter "><i class="fa fa-twitter " aria-hidden="true "></i></a></li>
-                                            <li class="social-flickr "><a class=" tooltip-top " target="_blank " href="# " data-tooltip="flickr "><i class="fa fa-flickr " aria-hidden="true "></i></a></li>
-                                            <li class="social-linkedin "><a class=" tooltip-top " target="_blank " href=" " data-tooltip="LinkedIn "><i class="fa fa-linkedin " aria-hidden="true "></i></a></li>
+                                        <ul class=" text-center d-block">
+                                            <li class="social-facebook "><a class="tooltip-top " target="_blank " href="https://www.facebook.com/JethwaEyeHospital/ " data-tooltip="Facebook "><i class="fa fa-facebook " aria-hidden="true "></i></a></li>
+                                            <!-- <li class="social-twitter "><a class="tooltip-top " target="_blank " href="# " data-tooltip="Twitter "><i class="fa fa-twitter " aria-hidden="true "></i></a></li> -->
+                                            <li class="social-instagram "><a class=" tooltip-top " target="_blank " href="https://www.instagram.com/jethwaeyehospital/" data-tooltip="instagram "><i class="fa fa-instagram " aria-hidden="true "></i></a></li>
+                                            <!-- <li class="social-linkedin "><a class=" tooltip-top " target="_blank " href=" " data-tooltip="LinkedIn "><i class="fa fa-linkedin " aria-hidden="true "></i></a></li> -->
                                         </ul>
                                     </div>
                                 </div>
