--- a/index.html
+++ b/index.html
@@ -57,16 +57,13 @@
 </head>
 
 <body>
-
     <!--page start-->
     <div class="page">
-
         <!-- preloader start -->
         <div id="preloader">
             <div id="status">&nbsp;</div>
         </div>
         <!-- preloader end -->
-
         <!--header start-->
         <header id="masthead" class="header ttm-header-style-01">
             <!-- ttm-topbar-wrapper -->
@@ -309,13 +306,13 @@
                         <div class="col-lg-6">
                             <!-- section title -->
                             <div class="section-title with-desc clearfix">
-                                <div class="title-header">
+                                <!-- <div class="title-header">
                                     <h2 class="title">We are here to IT Solution with 20 years of <span>experience</span></h2>
-                                </div>
+                                </div> -->
                                 <div class="title-desc">
                                     <p>JETHWA EYE HOSPITAL provide services since 1983. Dr Girish Jethwa is an Eye Surgeon. Laser surgery center, Phaco-Emulsification & Intra - Ocular lens implant specialist, Squint & Contact lens clinic, Diabetic Retinopathy
                                         clinic.
-                                    </P>
+                                    </p>
                                 </div>
                             </div>
                             <!-- section title end -->
@@ -793,11 +790,11 @@
                                         <!-- section title -->
                                         <div class="section-title with-desc clearfix text-center">
                                             <div class="title-header">
-                                                <h5>Why Altech</h5>
-                                                <h2 class="title">We deal with the aspects of professional <span>IT Services</span></h2>
+                                                <h5>Why Jethwa Eye Hospital</h5>
+                                                <h2 class="title">We deal with the aspects of professional <span> Services</span></h2>
                                             </div>
                                             <div class="title-desc">
-                                                <p>Our IT services converge business and technology experts to help to manage business processes of all categories.</p>
+                                                <p>provide's Laser surgery center, Phaco-Emulsification & Intra - Ocular lens implant specialist, Squint & Contact lens clinic.</p>
                                             </div>
                                         </div>
                                         <!-- section title end -->
@@ -1666,7 +1663,7 @@
                                     </div>
                                     <div class="featured-content ">
                                         <div class="featured-title ">
-                                            <h5>heading- Start of Treatment</h5>
+                                            <h5>Start of Treatment</h5>
                                         </div>
                                         <div class="ttm-box-description ">The proper treatment will be started as suggested per doctor</div>
                                     </div>
@@ -1775,24 +1772,17 @@
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
                             <div class="widget flicker_widget clearfix ">
-                                <h3 class="widget-title ">News Letter</h3>
+
                                 <div class="textwidget widget-text ">
-                                    Sign up today for hints, tips and the latest product news
-                                    <form id="subscribe-form " class="newsletter-form " method="post " action="# " data-mailchimp="true ">
-                                        <div class="mailchimp-inputbox clearfix " id="subscribe-content ">
-                                            <i class="fa fa-envelope "></i>
-                                            <input type="email " name="email " placeholder="Email Address.. " required=" ">
-                                            <input type="submit " value=" ">
-                                        </div>
-                                        <div id="subscribe-msg "></div>
-                                    </form>
-                                    <h5 class="mb-20 ">Follow Us On</h5>
+
+
+                                    <h5 class="mb-20 text-center ">Follow Us On</h5>
                                     <div class="social-icons circle social-hover ">
-                                        <ul class="list-inline ">
-                                            <li class="social-facebook "><a class="tooltip-top " target="_blank " href="# " data-tooltip="Facebook "><i class="fa fa-facebook " aria-hidden="true "></i></a></li>
-                                            <li class="social-twitter "><a class="tooltip-top " target="_blank " href="# " data-tooltip="Twitter "><i class="fa fa-twitter " aria-hidden="true "></i></a></li>
-                                            <li class="social-flickr "><a class=" tooltip-top " target="_blank " href="# " data-tooltip="flickr "><i class="fa fa-flickr " aria-hidden="true "></i></a></li>
-                                            <li class="social-linkedin "><a class=" tooltip-top " target="_blank " href=" " data-tooltip="LinkedIn "><i class="fa fa-linkedin " aria-hidden="true "></i></a></li>
+                                        <ul class=" text-center d-block">
+                                            <li class="social-facebook "><a class="tooltip-top " target="_blank " href="https://www.facebook.com/JethwaEyeHospital/ " data-tooltip="Facebook "><i class="fa fa-facebook " aria-hidden="true "></i></a></li>
+                                            <!-- <li class="social-twitter "><a class="tooltip-top " target="_blank " href="# " data-tooltip="Twitter "><i class="fa fa-twitter " aria-hidden="true "></i></a></li> -->
+                                            <li class="social-instagram "><a class=" tooltip-top " target="_blank " href="https://www.instagram.com/jethwaeyehospital/" data-tooltip="instagram "><i class="fa fa-instagram " aria-hidden="true "></i></a></li>
+                                            <!-- <li class="social-linkedin "><a class=" tooltip-top " target="_blank " href=" " data-tooltip="LinkedIn "><i class="fa fa-linkedin " aria-hidden="true "></i></a></li> -->
                                         </ul>
                                     </div>
                                 </div>
