--- a/appontment.html
+++ b/appontment.html
@@ -215,9 +215,6 @@
 
                                                 <div class="form-group"> <input class="form-control" type="date" required> <span class="form-label">SELECT DATE & TIME</span> </div>
                                             </div>
-
-                                        </div>
-                                        <div class="row">
                                             <div class="col-md-6" style="padding-left: 0;">
                                                 <!-- <h6 for="exampleFormControlTextarea1" class="text-white">Morning</h6> -->
                                                 <div class="form-group"> <select class="form-control" required>
@@ -237,9 +234,8 @@
                                                 </select> <span class="select-arrow"></span> <span class="form-label">Time Slot</span> </div>
                                             </div>
 
+
                                         </div>
-
-
                                         <div class="form-btn"> <button class="submit-btn">Book Now</button> </div>
                                     </form>
                                 </div>
@@ -257,7 +253,7 @@
             <div class="second-footer ttm-textcolor-white">
                 <div class="container ">
                     <div class="row ">
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 widget-area ">
                             <div class="widget widget_text clearfix ">
                                 <h3 class="widget-title ">About Jethwa eye Hospital</h3>
                                 <div class="textwidget widget-text ">
@@ -292,7 +288,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 widget-area ">
                             <div class="widget link-widget clearfix text-center">
                                 <h3 class="widget-title ">Quick Links</h3>
                                 <ul id="menu-footer-services ">
@@ -307,7 +303,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
+                        <!-- <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 widget-area ">
                             <div class="widget widget_text clearfix  text-center">
                                 <h3 class="widget-title text-">Latest News</h3>
                                 <ul class="widget-post ttm-recent-post-list ">
@@ -334,8 +330,8 @@
                                     </li>
                                 </ul>
                             </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
+                        </div> -->
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 widget-area ">
                             <div class="widget flicker_widget clearfix ">
 
                                 <div class="textwidget widget-text ">
