--- a/contectlens.html
+++ b/contectlens.html
@@ -517,14 +517,15 @@
     <!--footer start-->
     <footer class="footer ttm-bgcolor-skincolor  widget-footer clearfix mt-30">
 
-        <div class="second-footer ttm-textcolor-white">
+        <div class="second-footer ttm-textcolor-white ">
             <div class="container ">
                 <div class="row ">
-                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
+                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 widget-area ">
                         <div class="widget widget_text clearfix ">
                             <h3 class="widget-title ">About Jethwa eye Hospital</h3>
                             <div class="textwidget widget-text ">
-                                <p>JETHWA EYE HOSPITAL provide services since 1983. Dr Girish Jethwa is Eye Surgeon. Laser surgery center, Phaco-Emulsification & Intra - Ocular lens implant specialist, Squint & Contact lens clinic, Diabetic Retinopathy clinic.
+                                <p>JETHWA EYE HOSPITAL provide services since 1983. Dr Girish Jethwa is Eye Surgeon. Laser surgery center, Phaco-Emulsification & Intra - Ocular lens implant specialist, Squint & Contact lens clinic, Diabetic Retinopathy
+                                    clinic.
                                 </p>
                             </div>
                             <div class="quicklink-box ">
@@ -554,69 +555,62 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
-                        <div class="widget link-widget clearfix text-center">
+                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 widget-area ">
+                        <div class="widget link-widget clearfix text-center ">
                             <h3 class="widget-title ">Quick Links</h3>
                             <ul id="menu-footer-services ">
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="cataract.html">services</a></li>
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="gallery.html">Gallery</a></li>
-                                <li><a href="appontment.html">Book Appointment</a></li>
-                                <li><a href="contact.html">Contact Us</a></li>
+                                <li><a href="index.html ">Home</a></li>
+                                <li><a href="cataract.html ">services</a></li>
+                                <li><a href="about.html ">About</a></li>
+                                <li><a href="gallery.html ">Gallery</a></li>
+                                <li><a href="appontment.html ">Book Appointment</a></li>
+                                <li><a href="contact.html ">Contact Us</a></li>
                                 <!-- <li><a href="# ">Meet Our Experts</a></li>
-                                <li><a href="# ">Our Business Growth</a></li> -->
+                            <li><a href="# ">Our Business Growth</a></li> -->
                             </ul>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
-                        <div class="widget widget_text clearfix  text-center">
-                            <h3 class="widget-title text-">Latest News</h3>
+                    <!-- <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 widget-area ">
+                        <div class="widget widget_text clearfix text-center ">
+                            <h3 class="widget-title text- ">Latest News</h3>
                             <ul class="widget-post ttm-recent-post-list ">
                                 <li>
-                                    <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img "></a>
-                                    <a href="single-blog.html ">
-                                        <p> Define World Best IT Solution Technology</p>
-                                    </a>
+                                    <img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img ">
+
+                                    <p> Define World Best IT Solution Technology</p>
+
                                     <span class="post-date "><i class="fa fa-calendar "></i>May 01, 2019</span>
                                 </li>
                                 <li>
-                                    <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img "></a>
-                                    <a href="single-blog.html ">
-                                        <p> You Must Try 20 Secret Of Digital Transform</p>
-                                    </a>
+                                    <img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img ">
+
+                                    <p> You Must Try 20 Secret Of Digital Transform</p>
+
                                     <span class="post-date "><i class="fa fa-calendar "></i>May 03, 2019</span>
                                 </li>
                                 <li>
-                                    <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img "></a>
-                                    <a href="single-blog.html ">
-                                        <p> 10 PHP Frameworks You Need To Use Anywhere</p>
-                                    </a>
+                                    <img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img ">
+
+                                    <p> 10 PHP Frameworks You Need To Use Anywhere</p>
+
                                     <span class="post-date "><i class="fa fa-calendar "></i>May 05, 2019</span>
                                 </li>
                             </ul>
                         </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
+                    </div> -->
+                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 widget-area ">
                         <div class="widget flicker_widget clearfix ">
-                            <h3 class="widget-title ">News Letter</h3>
+
                             <div class="textwidget widget-text ">
-                                Sign up today for hints, tips and the latest product news
-                                <form id="subscribe-form " class="newsletter-form " method="post " action="# " data-mailchimp="true ">
-                                    <div class="mailchimp-inputbox clearfix " id="subscribe-content ">
-                                        <i class="fa fa-envelope "></i>
-                                        <input type="email " name="email " placeholder="Email Address.. " required=" ">
-                                        <input type="submit " value=" ">
-                                    </div>
-                                    <div id="subscribe-msg "></div>
-                                </form>
-                                <h5 class="mb-20 ">Follow Us On</h5>
+
+
+                                <h5 class="mb-20 text-center ">Follow Us On</h5>
                                 <div class="social-icons circle social-hover ">
-                                    <ul class="list-inline ">
-                                        <li class="social-facebook "><a class="tooltip-top " target="_blank " href="# " data-tooltip="Facebook "><i class="fa fa-facebook " aria-hidden="true "></i></a></li>
-                                        <li class="social-twitter "><a class="tooltip-top " target="_blank " href="# " data-tooltip="Twitter "><i class="fa fa-twitter " aria-hidden="true "></i></a></li>
-                                        <li class="social-flickr "><a class=" tooltip-top " target="_blank " href="# " data-tooltip="flickr "><i class="fa fa-flickr " aria-hidden="true "></i></a></li>
-                                        <li class="social-linkedin "><a class=" tooltip-top " target="_blank " href=" " data-tooltip="LinkedIn "><i class="fa fa-linkedin " aria-hidden="true "></i></a></li>
+                                    <ul class=" text-center d-block">
+                                        <li class="social-facebook "><a class="tooltip-top " target="_blank " href="https://www.facebook.com/JethwaEyeHospital/ " data-tooltip="Facebook "><i class="fa fa-facebook " aria-hidden="true "></i></a></li>
+                                        <!-- <li class="social-twitter "><a class="tooltip-top " target="_blank " href="# " data-tooltip="Twitter "><i class="fa fa-twitter " aria-hidden="true "></i></a></li> -->
+                                        <li class="social-instagram "><a class=" tooltip-top " target="_blank " href="https://www.instagram.com/jethwaeyehospital/" data-tooltip="instagram "><i class="fa fa-instagram " aria-hidden="true "></i></a></li>
+                                        <!-- <li class="social-linkedin "><a class=" tooltip-top " target="_blank " href=" " data-tooltip="LinkedIn "><i class="fa fa-linkedin " aria-hidden="true "></i></a></li> -->
                                     </ul>
                                 </div>
                             </div>
