--- a/keratoconus.html
+++ b/keratoconus.html
@@ -378,7 +378,7 @@
         <div class="second-footer ttm-textcolor-white">
             <div class="container ">
                 <div class="row ">
-                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
+                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 widget-area ">
                         <div class="widget widget_text clearfix ">
                             <h3 class="widget-title ">About Jethwa eye Hospital</h3>
                             <div class="textwidget widget-text ">
@@ -412,7 +412,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
+                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 widget-area ">
                         <div class="widget link-widget clearfix text-center">
                             <h3 class="widget-title ">Quick Links</h3>
                             <ul id="menu-footer-services ">
@@ -427,7 +427,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
+                    <!-- <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 widget-area ">
                         <div class="widget widget_text clearfix  text-center">
                             <h3 class="widget-title text-">Latest News</h3>
                             <ul class="widget-post ttm-recent-post-list ">
@@ -454,8 +454,8 @@
                                 </li>
                             </ul>
                         </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
+                    </div> -->
+                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 widget-area ">
                         <div class="widget flicker_widget clearfix ">
                             <h3 class="widget-title ">News Letter</h3>
                             <div class="textwidget widget-text ">
