--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <title>Altech – IT Solutions and Services HTML Template</title>
 
     <!-- favicon icon -->
-    <link rel="shortcut icon" href="assets/images/favicon.png" />
+    <link rel="shortcut icon" href="assets/images/logo.jpg" />
 
     <!-- bootstrap -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
@@ -272,7 +272,7 @@
                                             <!-- ttm_single_image-wrapper end -->
                                             <div class="about-overlay-02 ">
                                                 <h3>15 Years of</h3>
-                                                <p>IT Business Experience</p>
+                                                <p>Eye Treatment Experience</p>
                                             </div>
                                         </div>
                                         <div class="col-lg-12 ">
@@ -463,7 +463,7 @@
             <div class="second-footer ttm-textcolor-white">
                 <div class="container ">
                     <div class="row ">
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 widget-area ">
                             <div class="widget widget_text clearfix ">
                                 <h3 class="widget-title ">About Jethwa eye Hospital</h3>
                                 <div class="textwidget widget-text ">
@@ -498,7 +498,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 widget-area ">
                             <div class="widget link-widget clearfix text-center">
                                 <h3 class="widget-title ">Quick Links</h3>
                                 <ul id="menu-footer-services ">
@@ -513,7 +513,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
+                        <!-- <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 widget-area ">
                             <div class="widget widget_text clearfix  text-center">
                                 <h3 class="widget-title text-">Latest News</h3>
                                 <ul class="widget-post ttm-recent-post-list ">
@@ -540,8 +540,8 @@
                                     </li>
                                 </ul>
                             </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
+                        </div> -->
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 widget-area ">
                             <div class="widget flicker_widget clearfix ">
 
                                 <div class="textwidget widget-text ">
