--- a/entropion.html
+++ b/entropion.html
@@ -280,10 +280,10 @@
         <!--footer start-->
         <footer class="footer ttm-bgcolor-skincolor  widget-footer clearfix mt-30">
 
-            <div class="second-footer ttm-textcolor-white">
+            <div class="second-footer ttm-textcolor-white ">
                 <div class="container ">
                     <div class="row ">
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 widget-area ">
                             <div class="widget widget_text clearfix ">
                                 <h3 class="widget-title ">About Jethwa eye Hospital</h3>
                                 <div class="textwidget widget-text ">
@@ -318,24 +318,24 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
-                            <div class="widget link-widget clearfix text-center">
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 widget-area ">
+                            <div class="widget link-widget clearfix text-center ">
                                 <h3 class="widget-title ">Quick Links</h3>
                                 <ul id="menu-footer-services ">
-                                    <li><a href="index.html">Home</a></li>
-                                    <li><a href="cataract.html">services</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="gallery.html">Gallery</a></li>
-                                    <li><a href="appontment.html">Book Appointment</a></li>
-                                    <li><a href="contact.html">Contact Us</a></li>
+                                    <li><a href="index.html ">Home</a></li>
+                                    <li><a href="cataract.html ">services</a></li>
+                                    <li><a href="about.html ">About</a></li>
+                                    <li><a href="gallery.html ">Gallery</a></li>
+                                    <li><a href="appontment.html ">Book Appointment</a></li>
+                                    <li><a href="contact.html ">Contact Us</a></li>
                                     <!-- <li><a href="# ">Meet Our Experts</a></li>
                                 <li><a href="# ">Our Business Growth</a></li> -->
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
-                            <div class="widget widget_text clearfix  text-center">
-                                <h3 class="widget-title text-">Latest News</h3>
+                        <!-- <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 widget-area ">
+                            <div class="widget widget_text clearfix text-center ">
+                                <h3 class="widget-title text- ">Latest News</h3>
                                 <ul class="widget-post ttm-recent-post-list ">
                                     <li>
                                         <img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img ">
@@ -360,8 +360,8 @@
                                     </li>
                                 </ul>
                             </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
+                        </div> -->
+                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 widget-area ">
                             <div class="widget flicker_widget clearfix ">
 
                                 <div class="textwidget widget-text ">
